2005-10-13  Per Bothner  <per@bothner.com>

	* defun.java (rewriteForm): Update for changed Lambda.rewrite.

2005-07-21  Per Bothner  <per@bothner.com>

	* CommonLisp.java (environ): Since it is again possible to have multiple
	instances, set the environ field in the constructor, not statically.

2005-06-29  Per Bothner  <per@bothner.com>

	* CommonLisp.java (numEqu, numGrt, numGEq, numLss, numLEq): New static
	fields for the numeric compare functions.
	(initLisp): Define functions for them.
	Fixes Savannah bug #13573.

	* Lisp2.java (TRUE): Make final, and initialize statically.

	* Lisp2.java (selfEvaluatingSymbol):  Fix typo.
	
2005-06-04  Per Bothner  <per@bothner.com>

	* CommonLisp.java:  Update for AbstractFormat move to gnu.lists.

	* CommonLisp.java (writeFormat, displayFormat): Change type.

2005-05-08  Per Bothner  <per@bothner.com>

	* CommonLisp.java: Keep environ field set to clispEnvironment.
	(getNewEnvironment): Remove method.

2005-04-19  Per Bothner  <per@bothner.com>

	* CommonLisp.java (registerEnvironment): Use 'instance' field rather
	than creating a new instance.

2005-03-29  Per Bothner  <per@bothner.com>

	* CommonLisp.java: Initalize various static fields,
	including 'instance', in a static block, so they can be final.
	Set/restore current environment, since needed for loadClass.
	(initLisp): New method.
	(lispCounter): Remove - use Language.env_counter.
	(getNewEnvironment): New method.

2005-03-23  Per Bothner  <per@bothner.com>

	* Lisp2.java (importLocation): Remove kludge for GCJ/classpath.
	Remove no-longer-needed try-catch.

2005-03-17  Per Bothner  <per@bothner.com>

	* Lisp2.java (importLocation): Add kludge to work around GCJ bug.

	* Lisp2.java (importLocation): New method.
	* CommonLisp.java (<init>): Use importLocation.

2005-03-17  Per Bothner  <per@bothner.com>

	*  CLispReader.java (getReadTable): Remove method.
	(clispReadTable): Remove field.
	* CommonLisp.java (createReadTable): New method.
