@@ -1,3 +1,7 @@
+2006-04-10  Per Bothner  <per@bothner.com>
+
+	* CommonLisp.java (instance): Make public.
+
 2005-10-13  Per Bothner  <per@bothner.com>
 
 	* defun.java (rewriteForm): Update for changed Lambda.rewrite.
